--- a/style.css
+++ b/style.css
@@ -205,6 +205,16 @@ header h1 {
 #error{
     color: #0296e5;
 }
+.footer{
+  background-color: #0296e5;
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  color: #3a3f47;
+  bottom:0;
+  position: fixed;
+  text-align: center;
+}
 
 @keyframes loader {
   0% {
